# fastapi_crypto

./: README.md  pyproject.toml
crypto/: main.py  request.py  schema.py
crypto/database/: connection.py  init_db.py  models.py
crypto/routers/: views.py
